# Unified-Memory-Safety-Validation

./: CMakeLists.txt  CompatibleType.cpp  CompatibleType.hpp  DataGuard.cpp  DataGuard.hpp  DataflowAnalysis.h  LLVMEssentials.hh  PTAWrapper.cpp  PTAWrapper.hh  README.md  UnifiedMemSafe.cpp  Uriah.cpp  Uriah.hpp  Utils.cpp  Utils.hpp  ValueRange.cpp  ValueRange.hpp
program-dependence-graph/: CMakeLists.txt
program-dependence-graph/include/: AtomicRegionAnalysis.hh  DataAccessAnalysis.hh  DebugInfoUtils.hh  KSplitStatsCollector.hh  PDGEnums.hh  PDGNode.hh  PDGUtils.hh  SharedDataAnalysis.hh
program-dependence-graph/src/: DataDependencyGraph.cpp  Graph.cpp  KSplitCFG.cpp  KSplitStatsCollector.cpp  NesCheck.cpp  PDGUtils.cpp  ProgramDependencyGraph.cpp  SharedDataAnalysis.cpp
